src/test/ui/did_you_mean/issue-42764.stderr
error[E0308]: mismatched types
  --> $DIR/issue-42764.rs:21:43
   |
LL |     this_function_expects_a_double_option(n);
   |                                           ^ expected enum `DoubleOption`, found usize
   |
   = note: expected type `DoubleOption<_>`
              found type `usize`
help: try using a variant of the expected type
   |
LL |     this_function_expects_a_double_option(DoubleOption::FirstSome(n));
   |                                           ^^^^^^^^^^^^^^^^^^^^^^^^^^
LL |     this_function_expects_a_double_option(DoubleOption::AlternativeSome(n));
   |                                           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: aborting due to previous error

For more information about this error, try `rustc --explain E0308`.
